<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Utopia</string>
    <string name="STDEntry_name">STDEntry</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="account_information">Information</string>
    <string name="recommend">Recommend</string>
    <string name="score">Score</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="title_date"></string>
    <string name="title_activity_health_tips_list">HealthTipsListActivity</string>
    <string name="title_activity_health_tip_list">HealthTipListActivity</string>
    <string name="title_activity_every_day_push_list">EveryDayPushListActivity</string>
    <string name="title_activity_memorial_event_list">MemorialEventListActivity</string>
    <string name="page0_title">云彩笺</string>
    <string name="page1_title">红颜录</string>
    <string name="page2_title">待定</string>
    <string name="page3_title">胭脂匣</string>


</resources>
