<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Utopia.utopia.app.MainActivity" >
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item android:id="@+id/action_account"
        android:title="@string/account_information"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item android:id="@+id/action_recommend"
        android:title="@string/recommend"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item android:id="@+id/action_score"
        android:title="@string/score"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <item android:id="@+id/action_feedback"
        android:title="@string/feedback"
        android:orderInCategory="105"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="106"
        app:showAsAction="never" />
</menu>
